# fcsjanitor

./: .flake8  .gitignore  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  setup.cfg
src/fcsjanitor/: __init__.py  cli.py  janitor.py
