[tool.poetry]
name = "fcsjanitor"
version = "0.5.0"
description = "Clean up CyTOF FCS files as per the Standard Biotools recommendations"
authors = ["Miles Smith <miles-smith@omrf.org>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytometry = "^0.1.2"
scanpy = "^1.9.1"
tqdm = "^4.64.1"
numpy = "^1.23.4"
loguru = "^0.6.0"
typer = "^0.6.1"
rich = "^12.6.0"
flowkit = "^0.9.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
flake8 = "^5.0.4"
mypy = "^0.982"
ipython = "^8.5.0"
jupyterlab = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
janitor = "fcsjanitor.cli:app"