[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "fcsjanitor"
version = "0.9.0"
description = "Clean up CyTOF FCS files as per the Standard Biotools recommendations"
authors = [
    {name = "Miles Smith", email = "miles-smith@omrf.org"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.12.0",
    "flowkit>=1.2.3",
    "loguru>=0.7.3",
    "numpy>=1.26.4",
    "pytometry>=0.1.6",
    "rich>=14.0.0",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]
license = {text = "GPL-3.0"}

[project.scripts]
janitor = "fcsjanitor.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.12.3",
    "ty>=0.0.1a14",
]
